objects/CMPL123CME__Complaint__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Age_Units__c</fullName>
        <label>Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_Time_of_Event__c</fullName>
        <label>Age at Time of Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Review Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Review Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Workflow_Status__c</fullName>
        <description>Capture Assessment Workflow Status to notify RQC and RQC Approver</description>
        <label>Assessment Workflow Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_ANALYZE_External__c</fullName>
        <label>ANALYZE</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_ATC__c</fullName>
        <label>Answer To Customer (ATC)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Account_Category__c</fullName>
        <label>Account Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Account_Sub_category__c</fullName>
        <label>Account Sub-category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Action_Code_External__c</fullName>
        <label>Action Code</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints7</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Action_Code__c</fullName>
        <label>Action Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Activities__c</fullName>
        <label>Activities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Analyze__c</fullName>
        <label>ANALYZE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Assessment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_Asset_External__c</fullName>
        <label>System</label>
        <length>18</length>
        <referenceTo>Asset__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Asset_Record_Type__c</fullName>
        <label>Asset Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Asset__c</fullName>
        <label>Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Assets_External__c</fullName>
        <label>Asset</label>
        <length>18</length>
        <referenceTo>Asset__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_BatchNumberUnknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Number Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_Batch_Expiration_Date__c</fullName>
        <label>Batch Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Batch_Number_Reagent__c</fullName>
        <label>Batch Number (Reagent)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Batch_Number_Status__c</fullName>
        <label>Batch Number Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_BusinessHoursId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Business_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_CVM__c</fullName>
        <label>CVM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_CVR_Due_Date__c</fullName>
        <label>CVR Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_CVR_Report_Type__c</fullName>
        <label>CVR Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Created_By__c</fullName>
        <label>Case Created By</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints4</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Date_Time_Closed__c</fullName>
        <label>Case Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Date_Time_Opened__c</fullName>
        <label>Case Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Case_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Case External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Case_External__c</fullName>
        <label>Case External</label>
        <length>18</length>
        <referenceTo>Case__x</referenceTo>
        <relationshipLabel>Complaint</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Case_First_Closed_Date__c</fullName>
        <label>Case First Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Last_Modified_By_External__c</fullName>
        <label>Last Modified By Name</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints3</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Last_Modified_By__c</fullName>
        <label>Last Modified By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Owner_Name__c</fullName>
        <label>Case Owner</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Owner__c</fullName>
        <label>Case Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Software_Version_External__c</fullName>
        <label>zDeprecated Case Software Version</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints6</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Software_Version__c</fullName>
        <label>Case Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Case_Type__c</fullName>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Catalog_Profile__c</fullName>
        <label>Catalog Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Catalog_Profile</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Child_Investigation_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child Investigation Linked ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_ComplaintPurpose__c</fullName>
        <label>Complaint Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Complaint_Level__c</fullName>
        <formula>IF(!BMX_Was_Escalated_c__c ,'level 1',
  IF(BMX_Was_Escalated_c__c &amp;&amp; (OR(ISPICKVAL(BMX_INVEST__c , 'No'), ISBLANK(TEXT(BMX_INVEST__c)))), 'Escalated',
     IF(BMX_Was_Escalated_c__c &amp;&amp; ISPICKVAL(BMX_INVEST__c , 'Yes'), 'Investigation','')
  )
)</formula>
        <label>Complaint Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMX_Contact_External__c</fullName>
        <label>Contact</label>
        <length>18</length>
        <referenceTo>Contact__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Context__c</fullName>
        <label>Context</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Created_By__c</fullName>
        <label>Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Created_On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created On Site?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_CreatorName__c</fullName>
        <label>SAP Creator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Current_Level__c</fullName>
        <label>Current Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Current_Sofware_version__c</fullName>
        <label>Current Sofware version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_CustomerNeeds__c</fullName>
        <label>Customer Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Customer_Contact_Date_Time__c</fullName>
        <label>Customer Contact Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Customer_Contact_Date__c</fullName>
        <label>Customer Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Department_Level2__c</fullName>
        <label>Department Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_DescriptionUpdate__c</fullName>
        <label>Description Update</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_EU_MIR_Due_Date__c</fullName>
        <label>EU MIR Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_EU_MIR_Report_Type__c</fullName>
        <label>EU MIR Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Entitlement_Name__c</fullName>
        <label>Entitlement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Error_Code_Code__c</fullName>
        <label>Error Code (Code)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Error_Code_External__c</fullName>
        <label>Error Code</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints3</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Error_Code__c</fullName>
        <label>Error Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Feedback__c</fullName>
        <label>Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_First_L2_Escalation_Date__c</fullName>
        <label>First L2 Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_First_L2_Ownership_Taken__c</fullName>
        <label>First L2 Ownership Taken</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_FixedOnPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Remotely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_Flag_Reportable_Event__c</fullName>
        <formula>IF(ISBLANK(BMX_Is_Reportable__c),'No', BMX_Is_Reportable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Reportable Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_GDPR_L1Q1__c</fullName>
        <label>Patient data copied to BMX LCS System ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_GDPR_L1Q2__c</fullName>
        <label>L1 - If yes, SOP 031664 followed ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_GDPR_L2Q1__c</fullName>
        <label>Patient data copied to BMX L2 System ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Generic_Report_Due_Date__c</fullName>
        <label>Generic Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Generic_Report_Type__c</fullName>
        <label>Generic Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Global_Assessment_Classification__c</fullName>
        <description>This is the latest "Global Assessment Classification" value from the last Global Assessment performed and approved. (updated to Closed - Done status)</description>
        <label>Global Assessment Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Global_reporting_hierarchy_Level_1__c</fullName>
        <label>Global reporting hierarchy - Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Global_reporting_hierarchy_Level_2__c</fullName>
        <label>Global reporting hierarchy - Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Global_reporting_hierarchy_Level_3__c</fullName>
        <label>Global reporting hierarchy - Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_INVEST__c</fullName>
        <label>INVEST</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Initial_GlobalAssessmentApprovedDate__c</fullName>
        <label>Initial Global Assessment Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Initial_emdr_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial emdr created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_InterfaceErrorMessage__c</fullName>
        <label>SAP Interface Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Internal_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_InvQ1_Any_Complaint_data_missing__c</fullName>
        <label>InvQ1 Any Complaint data missing?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_InvQ2_Is_the_Tech_Complaint_an_RE__c</fullName>
        <label>InvQ2 Is the Technical Complaint an RE ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_InvQ3_Open_Invest_exist_on_issue__c</fullName>
        <label>InvQ3 Open Invest exist on issue?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_InvQ4_Was_the_IFU_followed__c</fullName>
        <label>InvQ4 Was the IFU followed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_InvQ5_User_Customer_impact_risk__c</fullName>
        <label>InvQ5 User/Customer impact/risk?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_InvQ6_Trend_on_the_issue_acceptable__c</fullName>
        <label>InvQ6 Trend on the issue acceptable?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_InvestSubmittedBy__c</fullName>
        <label>Invest Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigation Linked ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Investigation</label>
        <referenceTo>CMPL123CME__Investigation__c</referenceTo>
        <relationshipLabel>Related Complaints</relationshipLabel>
        <relationshipName>Complaints_related_to_investigation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Is_Reportable__c</fullName>
        <description>Renaming Is Reportable to RE</description>
        <label>RE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Item_and_Lot_Serial_Number__c</fullName>
        <formula>IF(ISBLANK(BMX_Batch_Number_Reagent__c),  BMX_Serial_Number_Asset__c, BMX_Batch_Number_Reagent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item and Lot-Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Justification__c</fullName>
        <formula>IF(ISPICKVAL(BMX_INVEST__c, 'Yes') , TEXT(BMX_INVEST__c), BMX_No_Invest_Justification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Justification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_LastModifiedDate__c</fullName>
        <label>Case Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Last_ATC_Sent_Date__c</fullName>
        <label>Last ATC Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Last_L2_Escalation_Date__c</fullName>
        <label>Last L2 Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Last_L2_to_L1_Deescalation_Date__c</fullName>
        <label>Last L2 to L1 Deescalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Level_1_Owner_External__c</fullName>
        <label>Level 1 Owner Name</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Level_1_Owner__c</fullName>
        <label>Level 1 Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Level_2_Owner_External__c</fullName>
        <label>Level 2 Owner Name</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Level_2_Owner__c</fullName>
        <label>Level 2 Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_pricing_hierarchy_2__c</fullName>
        <label>Local pricing hierarchy 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_pricing_hierarchy__c</fullName>
        <label>Local pricing hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_reporting_hierarchy__c</fullName>
        <label>Local reporting hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_LongDescription__c</fullName>
        <label>Long Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Material_Code__c</fullName>
        <inlineHelpText>Corresponds to Product Code for Asset</inlineHelpText>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Meddev_Due_Date__c</fullName>
        <label>Meddev Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Meddev_Report_Type__c</fullName>
        <label>Meddev Report Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_MilestoneStatus__c</fullName>
        <label>Milestone Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_NextStepsDetails__c</fullName>
        <label>Next Steps Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMX_No_Invest_Justification_External__c</fullName>
        <label>No Invest Justification</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints5</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_No_Invest_Justification__c</fullName>
        <label>No Invest Justification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Notification_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DLFL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Oldest_investigation_completed_date__c</fullName>
        <description>Consider oldest investigation completed date(First child investigation which is closed)</description>
        <label>Oldest investigation completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_PONumber__c</fullName>
        <label>PO Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_PRE1_Patient_or_operator_death__c</fullName>
        <label>PRE1.1 Patient or operator death?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_PRE2P2__c</fullName>
        <label>PRE2.2 If yes, describe in detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_PRE2_1_Patient_or_operator_harmed__c</fullName>
        <label>PRE2.1 Patient or operator harmed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_PRE3P2__c</fullName>
        <label>PRE3.2 If yes, describe in detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_PRE3_1_IndirectHarm_patient_reported__c</fullName>
        <label>PRE3.1 Indirect harm patient reported?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_PRE4_PatientHarmedTreatedIncorrectly__c</fullName>
        <label>PRE4 Patient harmed/treated incorrectly?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_PRE5_WrongResultsPRE_Guidance_014764__c</fullName>
        <label>PRE5 Wrong Results PRE Guidance 014764?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_PRE6_Reported_to_local_Reg_Authority__c</fullName>
        <label>PRE6 Reported to local Reg. Authority?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_PRE__c</fullName>
        <label>PRE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Parent_Case_External__c</fullName>
        <label>Parent Case</label>
        <length>18</length>
        <referenceTo>Case__x</referenceTo>
        <relationshipLabel>Related Complaints</relationshipLabel>
        <relationshipName>RelatedComplaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Parent_Case__c</fullName>
        <label>Parent Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Product_Code__c</fullName>
        <inlineHelpText>Correspond to Product Code for Product, whatever it’s an instrument or a reagent</inlineHelpText>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Product_External__c</fullName>
        <label>Product</label>
        <length>18</length>
        <referenceTo>Product2__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Product_Reagent_or_BOM__c</fullName>
        <label>Product (Reagent or BOM)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_RESULT_External__c</fullName>
        <label>RESULT</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints4</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_RESULT__c</fullName>
        <label>RESULT Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Related_Investigation_linked_Date__c</fullName>
        <description>Store the date when the Investigation is linked to complaint.   e.g. Today()</description>
        <label>Related Investigation linked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Reportable_Decision__c</fullName>
        <label>Reportable Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SAMPLE_External__c</fullName>
        <label>SAMPLE</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>BMX_SAMPLE__c</fullName>
        <label>SAMPLE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SAPCustomerNumber__c</fullName>
        <label>SAP Customer Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SAPOwner__c</fullName>
        <label>SAP Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SAP_Asset_Number__c</fullName>
        <label>SAP Asset Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_SAP_SoNumber__c</fullName>
        <label>SAP Service Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>